`Updated logo image in services component to HERO/logo.png`

--- a/src/app/features/landing-page/services/services.component.html
+++ b/src/app/features/landing-page/services/services.component.html
@@ -4,7 +4,7 @@
       <div class="glow-effect"></div>
       <div class="logo-wrapper">
         <div class="logo-mask"></div>
-        <img src="logo.png" alt="Mark Media Logo" class="logo-image" />
+        <img src="HERO/logo.png" alt="Mark Media Logo" class="logo-image" />
       </div>
     </div>
 
