`Update icons in about-with-camera component and add Bootstrap Icons CSS`

--- a/src/app/features/landing-page/components/about-with-camera/about-with-camera.component.html
+++ b/src/app/features/landing-page/components/about-with-camera/about-with-camera.component.html
@@ -61,7 +61,7 @@
 
           <!-- Each Service -->
           <div class="ingredient-item">
-            <div class="ingredient-qty">📸</div>
+            <div class="ingredient-qty"><i class="bi bi-arrow-right-short"></i></div>
             <div class="ingredient-text">
               <strong>Event Photography</strong>
               <p>
@@ -72,7 +72,7 @@
           </div>
 
           <div class="ingredient-item">
-            <div class="ingredient-qty">💍</div>
+            <div class="ingredient-qty"><i class="bi bi-arrow-right-short"></i></div>
             <div class="ingredient-text">
               <strong>Weddings & Celebrations</strong>
               <p>
@@ -82,7 +82,7 @@
           </div>
 
           <div class="ingredient-item">
-            <div class="ingredient-qty">👔</div>
+            <div class="ingredient-qty"><i class="bi bi-arrow-right-short"></i></div>
             <div class="ingredient-text">
               <strong>Fashion & Editorial</strong>
               <p>
@@ -93,7 +93,7 @@
           </div>
 
           <div class="ingredient-item">
-            <div class="ingredient-qty">⚽</div>
+            <div class="ingredient-qty"><i class="bi bi-arrow-right-short"></i></div>
             <div class="ingredient-text">
               <strong>Sports Photography</strong>
               <p>Dynamic action shots capturing peak athletic moments.</p>
@@ -101,7 +101,7 @@
           </div>
 
           <div class="ingredient-item">
-            <div class="ingredient-qty">🏥</div>
+            <div class="ingredient-qty"><i class="bi bi-arrow-right-short"></i></div>
             <div class="ingredient-text">
               <strong>Medical & Healthcare</strong>
               <p>
