`Optimized scrolling and animation performance in ContainerComponent`

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,13 @@
   box-sizing: border-box;
 }
 
+
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
+
+
+
+
